[package]
name = "h4x_re"
version = "0.2.0"
authors = ["Nixon <nixon.emoony@gmail.com>"]
edition = "2018"
license = "WTFPL"
description = "Hacky Regex's"
repository = "https://github.com/aDotInTheVoid/h4x_re"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
quickcheck="0.9"
quickcheck_macros = "0.9"